# charybde

./: .flake8  .gitignore  .pylintrc  .travis.yml  Makefile  README.md  analyze.py  dev-requirements.in  dev-requirements.txt  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
charybde/: __init__.py  __main__.py  dataset.py  download.py  filter.py  utils.py
charybde/parsers/: dump_parser.py  en_parser.py  fr_parser.py  parser.py
charybde/tests/: __init__.py  small_fr_dump.xml.bz2  test_dataset.py  test_download.py
doc/: conf.py  index.rst  requirements.txt
