[tool.poetry]
name = "charybde"
version = "0.1.0"
description = "Count syllables with neural networks."
authors = ["m09 <142691+m09@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.9.0"
requests = "^2.23.0"
tqdm = "^4.45.0"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
mypy = "^0.770"
pylint = "^2.4.4"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
Sphinx = "^3.0.1"
sphinx-autoapi = "^1.3.0"

[tool.poetry.scripts]
charybde = 'charybde.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
