[tool.poetry]
authors = ["m09 <142691+m09@users.noreply.github.com>"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing",
]
description = "Count syllables with neural networks."
license = "Apache-2.0"
name = "charybde"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.11.1"
python = "^3.8"
requests = "^2.28.0"
tqdm = "^4.64.0"
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]
Sphinx = "^5.0.2"
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-bugbear = "^22.6.22"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
mypy = "^0.961"
pylint = "^2.14.3"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
sphinx-autoapi = "^1.8.4"
types-requests = "^2.28.0"

[tool.poetry.scripts]
charybde = 'charybde.__main__:main'

[tool.isort]
profile = "black"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
